# tokenfit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: ci.yml
src/tokenfit/: __init__.py  __main__.py  cli.py  gui.py
tests/: test_tokenfit.py
